kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: add-uday-service-service
spec:
  selector:
    app: add-uday-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
